--- a/app/src/main/res/layout/activity_ad_preview.xml
+++ b/app/src/main/res/layout/activity_ad_preview.xml
@@ -42,82 +42,151 @@
                     android:id="@+id/ad_preview_empty_view_pager_iv"/>
             </RelativeLayout>
 
-             <LinearLayout
+            <TextView
+                android:id="@+id/ad_preview_swipe_instruction_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:text="@string/swipe_instruction"/>
+
+            <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="16dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/ad_preview_user_iv"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginRight="8dp"
+                        android:src="@drawable/placeholder_profile"/>
+                    <TextView
+                        android:id="@+id/ad_preview_user_name_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:layout_toRightOf="@id/ad_preview_user_iv"
+                        android:text="John Doe"
+                        android:textColor="@color/black"/>
+                    <TextView
+                        android:id="@+id/ad_preview_posted_on_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/ad_preview_user_name_tv"
+                        android:layout_toRightOf="@id/ad_preview_user_iv"
+                        android:textSize="12sp"
+                        android:text="Posted on Sept 30"/>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:background="#d6d6d6"
+                        android:layout_below="@id/ad_preview_user_iv"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+
+                    <TextView
+                        android:id="@+id/ad_preview_price_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20sp"
+                        android:textColor="#0d47a1"
+                        android:text="INR 49,000 "/>
+                    <TextView
+                        android:id="@+id/ad_preview_title_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/ad_preview_price_tv"
+                        android:text="Google Pixel 2 XL"
+                        android:textSize="16sp"/>
+
+
+                    <TextView
+                        android:id="@+id/ad_preview_category_tv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/ad_preview_title_tv"
+                        android:textAlignment="textEnd"
+                        android:text="Phones and Tablets"/>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_below="@id/ad_preview_category_tv"
+                        android:background="#d6d6d6"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/ad_preview_location_iv"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginTop="8dp"
+                        android:src="@mipmap/ic_send_location"/>
+                    <TextView
+                        android:id="@+id/ad_preview_distance_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:textSize="12sp"
+                        android:layout_toRightOf="@id/ad_preview_location_iv"
+                        android:text="11.2 kms away"/>
+                    <TextView
+                        android:id="@+id/ad_preview_location_name_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:layout_below="@id/ad_preview_distance_tv"
+                        android:layout_toRightOf="@id/ad_preview_location_iv"
+                        android:text="Hussainpur Main Rd, Anandapur, Kolkata"
+                        android:textColor="@color/black"/>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:background="#d6d6d6"
+                        android:layout_below="@id/ad_preview_location_iv"/>
+
+                </RelativeLayout>
 
                 <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:textSize="16sp"
-                    android:textColor="#000000"
-                    android:text="Nexus 5 "
-                    android:id="@+id/ad_preview_title_tv"/>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.5"
-                    android:textAlignment="textEnd"
-                    android:textSize="14sp"
-                    android:textColor="#000000"
-                    android:text="Sept 30"
-                    android:id="@+id/ad_preview_posted_on_tv"/>
-            </LinearLayout>
-
-
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="8dp"
                 android:textSize="14sp"
                 android:text="Nexus 5 Nexus 5 oijodfsjas  ouuwodksmoiasdfmsafd oijmfdlksdks "
                 android:id="@+id/ad_preview_description_tv"/>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="#d6d6d6"/>
 
-                 <TextView
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:layout_marginBottom="16dp"
-                     android:textAlignment="textEnd"
-                     android:id="@+id/ad_preview_category_tv"
-                     android:text="Phones and Tablets"/>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="16dp">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:textSize="20sp"
-                    android:textColor="#0d47a1"
-                    android:text="Nexus 5 "
-                    android:id="@+id/ad_preview_price_tv"/>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.5"
-                    android:textAlignment="textEnd"
-                    android:textSize="14sp"
-                    android:text="2.3 km away"
-                    android:id="@+id/ad_preview_distance_tv"/>
-            </LinearLayout>
 
 
         </LinearLayout>
@@ -155,7 +224,7 @@
                     fancy:fb_defaultColor="#b5e4d5"/>
             </LinearLayout>
 
-        <RelativeLayout
+            <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -177,7 +246,7 @@
         </RelativeLayout>
 
 
-    </LinearLayout>
+        </LinearLayout>
     </ScrollView>
 
 </RelativeLayout>
