--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -21,7 +21,10 @@
                 <android.support.v4.view.ViewPager
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
-                    android:layout_margin="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="5dp"
                     android:id="@+id/post_preview_images_viewpager"/>
 
                 <ImageView
@@ -29,107 +32,129 @@
                     android:layout_height="100dp"
                     android:layout_centerInParent="true"
                     android:src="@mipmap/ic_add_post"
+                    android:visibility="gone"
                     android:id="@+id/post_empty_view_pager_iv"/>
+                <TextView
+                    android:id="@+id/post_empty_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="No Photo Added. Add photos."/>
             </RelativeLayout>
 
+            <TextView
+                android:id="@+id/post_swipe_instruction_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:text="@string/swipe_instruction"/>
 
 
 
-            <LinearLayout
+
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:orientation="vertical">
-
+                android:layout_margin="16dp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginBottom="8dp">
+                    android:padding="8dp"
+                    android:orientation="vertical">
 
-                    <ImageButton
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginRight="4dp"
-                        android:id="@+id/post_image_one_ib"
-                        android:src="@mipmap/ic_add_photo_white"/>
-                    <ImageButton
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginRight="4dp"
-                        android:id="@+id/post_image_two_ib"
-                        android:src="@mipmap/ic_add_photo_white" />
-                    <ImageButton
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginRight="4dp"
-                        android:id="@+id/post_image_three_ib"
-                        android:src="@mipmap/ic_add_photo_white" />
-                    <ImageButton
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginRight="4dp"
-                        android:id="@+id/post_image_four_ib"
-                        android:src="@mipmap/ic_add_photo_white" />
-                    <ImageButton
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginRight="4dp"
-                        android:id="@+id/post_image_five_ib"
-                        android:src="@mipmap/ic_add_photo_white" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginBottom="8dp">
+
+                        <ImageButton
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_marginRight="4dp"
+                            android:id="@+id/post_image_one_ib"
+                            android:background="@mipmap/ic_add_post"/>
+                        <ImageButton
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_marginRight="4dp"
+                            android:id="@+id/post_image_two_ib"
+                            android:background="@mipmap/ic_add_post" />
+                        <ImageButton
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_marginRight="4dp"
+                            android:id="@+id/post_image_three_ib"
+                            android:background="@mipmap/ic_add_post" />
+                        <ImageButton
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_marginRight="4dp"
+                            android:id="@+id/post_image_four_ib"
+                            android:background="@mipmap/ic_add_post" />
+                        <ImageButton
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_marginRight="4dp"
+                            android:id="@+id/post_image_five_ib"
+                            android:background="@mipmap/ic_add_post" />
+
+                    </LinearLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/post_title_et"
+                            android:textSize="14sp"
+                            android:hint="Ad Title"/>
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/post_description_et"
+                            android:textSize="14sp"
+                            android:hint="Description"/>
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/post_price_et"
+                            android:textSize="14sp"
+                            android:inputType="number"
+                            android:hint="Price"/>
+                    </android.support.design.widget.TextInputLayout>
+
+
+                    <Spinner
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="16dp"
+                        android:id="@+id/post_category_spinner" />
+
+                    <android.support.v7.widget.SwitchCompat
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Share Phone Number "
+                        android:id="@+id/post_share_phone_switch"/>
+
 
                 </LinearLayout>
+            </android.support.v7.widget.CardView>
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/post_title_et"
-                        android:textSize="14sp"
-                        android:hint="Ad Title"/>
-                </android.support.design.widget.TextInputLayout>
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/post_description_et"
-                        android:textSize="14sp"
-                        android:hint="Description"/>
-                </android.support.design.widget.TextInputLayout>
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/post_price_et"
-                        android:textSize="14sp"
-                        android:inputType="number"
-                        android:hint="Price"/>
-                </android.support.design.widget.TextInputLayout>
-
-
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:id="@+id/post_category_spinner" />
-
-                <android.support.v7.widget.SwitchCompat
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Share Phone Number "
-                    android:id="@+id/post_share_phone_switch"/>
-
-
-            </LinearLayout>
 
 
             <mehdi.sakout.fancybuttons.FancyButton
