--- a/app/src/main/res/layout/activity_ad_preview.xml
+++ b/app/src/main/res/layout/activity_ad_preview.xml
@@ -1,20 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:fancy="http://schemas.android.com/apk/res-auto"
-    tools:context="com.sapicons.deepak.k2psap.Activities.AdPreviewActivity">
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v4.view.ViewPager
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:layout_margin="16dp"
+                android:id="@+id/ad_preview_images_viewpager"/>
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_centerInParent="true"
+                android:src="@mipmap/ic_android_icon"
+                android:id="@+id/ad_preview_empty_view_pager_iv"/>
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/ad_preview_swipe_instruction_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:text="@string/swipe_instruction"/>
+    </LinearLayout>
+
+    <include layout= "@layout/bottom_sheet_for_ad_preview" />
 
     <android.support.design.widget.FloatingActionButton
+
+        android:id="@+id/ad_preview_set_rem_fav_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="16dp"
+        android:layout_marginRight="16dp"
         android:src="@drawable/ic_star_border_black_24dp"
-        android:id="@+id/ad_preview_set_rem_fav_fab"/>
+        app:layout_anchor="@+id/bottom_sheet_rl"
+        app:layout_anchorGravity="top|end"/>
+
+
+
+    <!--
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -26,7 +65,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="250dp">
+                android:layout_height="400dp">
 
                 <android.support.v4.view.ViewPager
                     android:layout_width="match_parent"
@@ -248,5 +287,6 @@
 
         </LinearLayout>
     </ScrollView>
+    -->
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
