--- a/app/src/main/res/layout/item_photo_preview_view_pager.xml
+++ b/app/src/main/res/layout/item_photo_preview_view_pager.xml
@@ -1,21 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="400dp"
     android:layout_margin="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!--
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:elevation="10dp"
         app:cardCornerRadius="5dp">
 
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/item_view_pager_image_view"
-            android:scaleType="centerCrop"/>
-    </android.support.v7.widget.CardView>
+            android:scaleType="centerCrop"/> -->
+        <com.jsibbold.zoomage.ZoomageView
+            android:id="@+id/item_view_pager_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/side_nav_bar"
+            android:scaleType="centerCrop"
+            app:zoomage_restrictBounds="false"
+            app:zoomage_animateOnReset="true"
+            app:zoomage_autoResetMode="UNDER"
+            app:zoomage_autoCenter="true"
+            app:zoomage_zoomable="true"
+            app:zoomage_translatable="true"
+            app:zoomage_minScale="0.6"
+            app:zoomage_maxScale="8"
+            />
+
 
 </LinearLayout>
