--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -88,19 +88,22 @@
                             android:layout_height="40dp"
                             android:layout_marginRight="4dp"
                             android:id="@+id/post_image_three_ib"
-                            android:background="@mipmap/ic_add_post" />
+                            android:background="@mipmap/ic_add_post"
+                            android:visibility="gone"/>
                         <ImageButton
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:layout_marginRight="4dp"
                             android:id="@+id/post_image_four_ib"
-                            android:background="@mipmap/ic_add_post" />
+                            android:background="@mipmap/ic_add_post"
+                            android:visibility="gone"/>
                         <ImageButton
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:layout_marginRight="4dp"
                             android:id="@+id/post_image_five_ib"
-                            android:background="@mipmap/ic_add_post" />
+                            android:background="@mipmap/ic_add_post"
+                            android:visibility="gone"/>
 
                     </LinearLayout>
 
@@ -126,38 +129,106 @@
                             android:hint="Description"/>
                     </android.support.design.widget.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <LinearLayout
+                        android:id="@+id/frag_post_exchange_type_ll"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:orientation="vertical"
+                        android:background="@drawable/white_bg_black_border">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginTop="8dp"
+                            android:textSize="12sp"
+                            android:text="Trade for"
+                            android:textColor="@color/blue"/>
+                        <Spinner
+                            android:id="@+id/frag_post_exchange_types_spinner"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:paddingBottom="8dp">
+
+                        </Spinner>
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="4dp"
+                            android:layout_marginRight="4dp">
+                            <EditText
+                                android:id="@+id/post_price_et"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:textSize="14sp"
+                                android:inputType="number"
+                                android:hint="Price"
+                                android:visibility="gone"/>
+                        </android.support.design.widget.TextInputLayout>
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="4dp"
+                            android:layout_marginRight="4dp">
+                            <EditText
+                                android:id="@+id/post_exchange_for_et"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:textSize="14sp"
+                                android:hint="Exchange For"
+                                android:visibility="gone"/>
+                        </android.support.design.widget.TextInputLayout>
+
+                    </LinearLayout>
+
+                   <!-- <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:id="@+id/post_price_et"
+                            android:id="@+id/post_price_eto"
                             android:textSize="14sp"
                             android:inputType="number"
                             android:hint="Price"/>
-                    </android.support.design.widget.TextInputLayout>
+                    </android.support.design.widget.TextInputLayout>-->
 
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:text="Select Category"
-                        android:textSize="14sp"/>
-
-                    <Spinner
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"
-                        android:background="@drawable/white_bg_black_border"
-                        android:layout_marginBottom="16dp"
-                        android:id="@+id/post_category_spinner" />
+                        android:orientation="vertical"
+                        android:layout_marginTop="16dp"
+                        android:background="@drawable/white_bg_black_border">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginTop="8dp"
+                            android:text="Select Category"
+                            android:textSize="12sp"
+                            android:textColor="@color/blue"/>
+
+                        <Spinner
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingTop="8dp"
+                            android:paddingBottom="8dp"
+                            android:layout_marginBottom="16dp"
+                            android:id="@+id/post_category_spinner" />
+                    </LinearLayout>
+
 
                     <android.support.v7.widget.SwitchCompat
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="16dp"
+                        android:padding="16dp"
                         android:text="Share Phone Number "
                         android:textSize="14sp"
                         android:id="@+id/post_share_phone_switch"/>
@@ -196,7 +267,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_toRightOf="@id/frag_explore_location_icon"
                                 android:text="Change"
-                                android:textSize="10sp"
+                                android:textSize="12sp"
                                 android:textColor="@color/blue"/>
                             <TextView
                                 android:id="@+id/frag_post_address_tv"
