--- a/app/src/main/res/layout/item_ad.xml
+++ b/app/src/main/res/layout/item_ad.xml
@@ -48,7 +48,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="14sp"
                         android:textColor="@color/black"
-                        android:text="Nokia 5.1 Plus"/>
+                        android:text="Loading ..."/>
 
                     <TextView
                         android:id="@+id/item_ad_price_tv"
@@ -56,8 +56,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="16dp"
                         android:textStyle="bold"
-                        android:textColor="@color/blue"
-                        android:text="6000"/>
+                        android:textColor="@color/blue"/>
 
                 </LinearLayout>
 
@@ -77,15 +76,13 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/green800"
                         android:textAlignment="textEnd"
-                        android:textSize="12dp"
-                        android:text="4 days ago"/>
+                        android:textSize="12dp"/>
                     <TextView
                         android:id="@+id/item_ad_distance_tv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAlignment="textEnd"
-                        android:textSize="12dp"
-                        android:text="4.7 kms away"/>
+                        android:textSize="12dp"/>
 
                 </LinearLayout>
 
