--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -35,7 +35,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:id="@+id/item_chat_ad_title"
-                    android:text="Item X for Sale"
+                    android:text="Loading ..."
                     android:textColor="#000000"/>
 
                 <LinearLayout
@@ -50,7 +50,6 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:id="@+id/item_chat_post_user_name"
-                        android:text="User ABC"
                         android:layout_marginTop="4dp"/>
 
                     <TextView
@@ -60,7 +59,6 @@
                         android:id="@+id/item_chat_post_price"
                         android:textAlignment="textEnd"
                         android:textSize="18sp"
-                        android:text="15000"
                         android:textColor="#000000"
                         android:layout_marginTop="4dp"/>
                 </LinearLayout>
@@ -77,14 +75,12 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:id="@+id/item_chat_distance_away"
-                        android:textSize="12sp"
-                        android:text="5 kms away"/>
+                        android:textSize="12sp"/>
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:id="@+id/item_chat_last_msg_time"
-                        android:text="1 hr ago"
                         android:textSize="12sp"
                         android:textColor="#027300"
                         android:textAlignment="textEnd"/>
